<resources>
    <string name="app_name">CleaningTheCity</string>
    <string name="game_over">GAME OVER!</string>
    <string name="try_again">Try Again</string>
    <string name="game_name">Clean The City</string>
    <string name="records_table">Records</string>
    <string name="start_game">Start</string>
    <string name="check_enter_name">Insert your name</string>
    <string name="high_score">"High score: "</string>
    <string name="player_name">Player name</string>
    <string name="game_score">"score: "</string>
    <string name="records_score">Score</string>
    <string name="records_rank">Rank</string>
    <string name="records_name">Name</string>
    <string name="level">Level :</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="pb_Status">High Score Table Loaded</string>
    <string name="back_menu">Back menu</string>
    <string name="level_up">"level "</string>
    <string name="instructions_window">Instructions</string>
    <string name="game_instructions">Collect all the garbage from the city and avoid the black mine</string>
    <string name="game_instructions_title">Game Instructions</string>
    <string name="instructions_btn">Instructions</string>
    <string name="intro_txt">Hey!, we need your help to clean the city</string>
    <string name="instruction_points10">10 points</string>
    <string name="instruction_points30">30 points</string>
    <string name="instruction_healkit">Heal kit</string>
    <string name="instructions_badhit">Harm</string>
    <string name="win_game">Congratulations!</string>
    <string name="text_win">You succseded to clear the city, all the residents appreciate your help</string>
    <string name="text_lose">The residents appreciate your help but there is still lot of work to do, try again</string>
    <string name="share">Share Result</string>
    <string name="titleShare">Hey watch my result from Cleaning The City Quizz APP: </string>
    <string name="music_on_off">music on/off</string>
    <string name="sound_click">Sound button clicked</string>
    <string name="lifes_object">lifes object</string>
    <string name="background_description">back ground road animation</string>
    <string name="lvl_animation_description">level up animation</string>
    <string name="player_object_description">player object, truck</string>
    <string name="object_10points_description">objects of 10point</string>
    <string name="object_harm_description">object that hit player life</string>
    <string name="bonus_object_description">object with extra points,bonus</string>
    <string name="object_healkit_description">object that heal player lifes</string>
    <string name="default_score_text">0</string>
    <string name="exit_text_instructions">X</string>
    <string name="objects_descritpions_instructions">objects Hit</string>
    <string name="objects_hit_descritpions_instructions">objects Hit</string>
</resources>
