<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/txt_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circle_quit_background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/game_instructions_title"
        android:padding="10dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/game_instructions" />

    <TableLayout
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <LinearLayout android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:contentDescription="objects Hit"
                android:src="@drawable/object1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:contentDescription="objects Hit"
                android:src="@drawable/object2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:contentDescription="objects Hit"
                android:src="@drawable/object3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:contentDescription="objects Hit"
                android:src="@drawable/object4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:contentDescription="objects Hit"
                android:src="@drawable/object5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/instruction_points10"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:contentDescription="bonus object hit"
                android:src="@drawable/recyclebonus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/instruction_points30"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:contentDescription="heal kit"
                android:src="@drawable/healkit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/instruction_healkit"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="151dp"
                android:layout_height="20dp"
                android:contentDescription="bad object hit"
                android:src="@drawable/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/instructions_badhit"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </TableLayout>


</LinearLayout>